force-app/main/default/objects/Doctor__c/fields/Avaliability__c.field-meta.xml
<CustomField>
    <fullName>Avaliability__c</fullName>
    <label>Avaliability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Daily 10 AM - 2 PM</fullName>
            </value>
            <value>
                <fullName>Daily 5 PM - 7 PM</fullName>
            </value>
            <value>
                <fullName>Every Monday</fullName>
            </value>
            <value>
                <fullName>Every Tuesday</fullName>
            </value>
            <value>
                <fullName>Every Wednesday</fullName>
            </value>
            <value>
                <fullName>Every Thursday</fullName>
            </value>
            <value>
                <fullName>Every Friday</fullName>
            </value>
            <value>
                <fullName>Every Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>