force-app/main/default/objects/Doctor__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>FRCOG</fullName>
            </value>
            <value>
                <fullName>FRSC</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>MPH</fullName>
            </value>
            <value>
                <fullName>DPM</fullName>
            </value>
            <value>
                <fullName>FACOG</fullName>
            </value>
            <value>
                <fullName>MSN</fullName>
            </value>
            <value>
                <fullName>FRCS</fullName>
            </value>
            <value>
                <fullName>MBBS</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MSc</fullName>
            </value>
            <value>
                <fullName>FACS</fullName>
            </value>
            <value>
                <fullName>FRCSC</fullName>
            </value>
            <value>
                <fullName>MMed</fullName>
            </value>
            <value>
                <fullName>ABR</fullName>
            </value>
            <value>
                <fullName>MHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>