force-app/main/default/objects/Doctor__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Nephrologists</fullName>
            </value>
            <value>
                <fullName>Intensivist</fullName>
            </value>
            <value>
                <fullName>Surgeons</fullName>
            </value>
            <value>
                <fullName>Pulmonologist</fullName>
            </value>
            <value>
                <fullName>Rheumatologist</fullName>
            </value>
            <value>
                <fullName>Paediatrician</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Neonatologist</fullName>
            </value>
            <value>
                <fullName>Chest Specialist</fullName>
            </value>
            <value>
                <fullName>Allergy Specialist</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Diabatologist</fullName>
            </value>
            <value>
                <fullName>Gynaec</fullName>
            </value>
            <value>
                <fullName>Infertility specialist</fullName>
            </value>
            <value>
                <fullName>Ortho</fullName>
            </value>
            <value>
                <fullName>Derma</fullName>
            </value>
            <value>
                <fullName>Homeo</fullName>
            </value>
            <value>
                <fullName>Ayurveda</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Gastro</fullName>
            </value>
            <value>
                <fullName>Cardio</fullName>
            </value>
            <value>
                <fullName>Infection Physician</fullName>
            </value>
            <value>
                <fullName>Vetri</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>Ophthal</fullName>
            </value>
            <value>
                <fullName>Endo</fullName>
            </value>
            <value>
                <fullName>Patho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>